# dcf21-astrolabe-py

./: main_astrolabe.sh  pyproject.toml
Lib/astrolabe/: __main__.py  bright_stars_process.py  mother_back.py  rete.py
